@@ -1,4 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<tileset version="1.2" tiledversion="1.2.2" name="blocks_tiled_test_01" tilewidth="32" tileheight="32" spacing="2" margin="2" tilecount="198" columns="18">
- <image source="blocks_tiled_test_01.png" width="614" height="376"/>
-</tileset>
