@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <map version="1.2" tiledversion="1.2.2" orientation="orthogonal" renderorder="right-down" width="60" height="15" tilewidth="32" tileheight="32" infinite="0" nextlayerid="4" nextobjectid="4">
- <tileset firstgid="1" source="blocks_tiled_test_02.tsx"/>
+ <tileset firstgid="1" source="blocks_tiled_test_01.tsx"/>
  <tileset firstgid="199" source="astronaut_front.tsx"/>
  <layer id="1" name="Tile Layer 1" width="60" height="15">
   <data encoding="csv">
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
 0,0,0,0,94,95,96,0,0,94,95,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,94,95,96,0,0,94,95,96,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,99,100,101,0,0,0,0,0,0,99,100,101,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,94,95,96,0,0,0,0,0,0,0,0,0,0,0,0,0,
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,99,100,101,0,0,0,0,0,0,99,100,101,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,94,95,96,0,0,0,0,0,0,0,99,100,101,0,0,0,
 0,94,95,96,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,94,95,96,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,99,100,101,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
 0,0,0,0,0,0,94,95,96,0,0,0,0,94,95,96,0,0,0,0,0,0,0,0,0,94,95,96,0,99,100,101,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,99,100,101,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,99,100,101,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,94,95,96,0,0,0,0,0,
 99,100,101,0,0,94,95,96,0,0,99,100,101,0,0,0,0,99,100,101,0,0,0,0,0,0,0,0,0,0,0,0,0,0,94,95,96,0,0,0,97,98,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,94,95,96,0,
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,99,100,101,0,0,0,0,0,0,0,0,0,0,0,0,0,
 0,0,0,0,0,0,0,0,0,0,0,0,0,163,0,0,0,0,0,0,0,0,0,0,0,0,182,183,184,185,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
 0,0,0,0,0,0,0,0,0,0,0,0,0,165,0,0,0,0,0,0,0,0,0,0,0,0,188,186,186,189,0,0,0,0,0,0,0,0,0,0,0,167,173,174,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
@@ -22,7 +22,6 @@
 </data>
  </layer>
  <objectgroup id="3" name="Object Layer 1">
-  <object id="2" x="130" y="386" width="61" height="59"/>
   <object id="3" gid="199" x="578" y="379" width="32" height="61"/>
  </objectgroup>
 </map>
