@@ -1,6 +1,6 @@
 /*
   GPL
-  (c) 2017, thorsten.johannvorderbrueggen@t-online.de
+  (c) 2017-2019, thorsten.johannvorderbrueggen@t-online.de
 
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -33,7 +33,6 @@
 #include <unistd.h>
 #include <time.h>
 
-/* for libconfig */
 #include <libconfig.h>
 
 #define eprintf(format, ...) fprintf (stderr, format, ##__VA_ARGS__)
@@ -53,7 +52,7 @@ typedef struct {
 	float y;
 } vector2d_t;
 
-typedef struct {
+typedef struct pos2d_t{
 	int x;
 	int y;
 } pos2d_t;
@@ -63,7 +62,7 @@ typedef struct spread_t {
 	int w;
 } spread_t;
 
-/* hold all textures */
+/* hold all infos around the textures */
 typedef struct {
 	char          *name;
 	SDL_Texture   *texture;
@@ -71,14 +70,33 @@ typedef struct {
 	/* TODO: add handling of it */
 	union {
 		struct spread_t;
-		spread_t size;
+		spread_t size;               /* size of ONE sprite             */
 	};
 
-	unsigned char max_frames_x;          /* num columns                   */
-	unsigned char max_frames_y;          /* num rows                      */
+	unsigned char max_frames_x;          /* num columns                    */
+	unsigned char max_frames_y;          /* num rows                       */
 } game_texture_t;
 
-/* simple game struct */
+/* the game object */
+typedef struct {
+	char             *name;
+	game_texture_t   *texture_obj;
+
+	union {
+		struct pos2d_t;
+		pos2d_t pos;
+	};
+
+	vector2d_t       velo;
+	vector2d_t       accel;
+
+	unsigned char    column;     /* which sprite for the animation         */
+	unsigned char    row;        /* row represents front/back/left/right   */
+
+	SDL_RendererFlip flip;
+} game_obj_t;
+
+/* the game struct -> holds all infos needed for the game */
 typedef struct {
 	char *name;
 	char *config;
@@ -87,16 +105,29 @@ typedef struct {
 	SDL_Renderer *renderer;
 
 	union {
-		struct spread_t;            /* screen size                    */
+		struct spread_t;            /* screen size                     */
 		spread_t screen;
 	};
 
-	game_texture_t  *texture_array;     /* all used textures              */
-	size_t size_texture_array;
+	game_texture_t  *textures_array;    /* NULL is vaild, if the textures  */
+	size_t size_textures_array;         /* are included via config.tilesets*/
+
+	game_obj_t *players;                /* the player objects              */
+	size_t size_players_array;
+
+	game_obj_t *enemies;                /* the enemies objects             */
+	size_t size_enemies_array;
+
+	game_obj_t *objects;                /* means WITH movement             */
+	size_t size_objects_array;
+
+	game_obj_t *static_objects;         /* means NO movement, but          */
+	size_t size_static_objects_array;   /* animation is possible           */
+
 } game_t;
 
 /*
- * --------------------------- other topics ------------------------------------
+ * --------------------------- other topics -------------------------------------
  */
 
 /*
@@ -113,7 +144,7 @@ get_random_value(void);
 
 
 /*
- * --------------------------- game related ------------------------------------
+ * --------------------------- game related -------------------------------------
  */
 
 int
@@ -124,7 +155,7 @@ cleanup_game(game_t *game);
 
 
 /*
- * --------------------------- texture related ---------------------------------
+ * --------------------------- texture related ----------------------------------
  */
 
 SDL_Texture *
@@ -135,7 +166,7 @@ destroy_texture(SDL_Texture *t);
 
 
 /*
- * --------------------------- window related ----------------------------------
+ * --------------------------- window related -----------------------------------
  */
 
 SDL_Window *
@@ -150,27 +181,29 @@ cleanup_window(SDL_Window *w, SDL_Renderer *r);
 
 
 /*
- * --------------------------- object fab related ------------------------------
+ * --------------------------- game object related ------------------------------
+ */
+
+game_obj_t *
+alloc_game_object(char *name, int x, int y, game_texture_t *t);
+
+void
+free_game_object(game_obj_t *t);
+
+
+
+/*
+ * --------------------------- collision related --------------------------------
  */
 
 
 /*
- * --------------------------- game object related -----------------------------
+ * --------------------------- 2d vector related --------------------------------
  */
 
 
 /*
- * --------------------------- collision related -------------------------------
- */
-
-
-/*
- * --------------------------- 2d vector related -------------------------------
- */
-
-
-/*
- * --------------------------- input related -----------------------------------
+ * --------------------------- input related ------------------------------------
  */
 
 
