@@ -1,0 +1,2 @@
+/moving_tiled
+/main.o
