@@ -1,22 +1,48 @@
 #
-# fixed_tiled
+# moving_tiled
 #
 # BSD 2-Clause
 # (c) 2019, thorsten.johannvorderbrueggen@t-online.de
 #
 
 # somthing like a simple version check
-name = "fixed_tiled";
+name = "moving_tiled";
 
 config:
 {
 	  window:
 	  {
-		title = "fixed_tiled demo";
+		title = "moving_tiled demo";
 		size = { w = 640; h = 480 };
 
 		background = { r = 100; g = 200; b = 100; a = 255 };
 	  };
+
+	  joysticks = (
+	  	{
+			name = "joystick_1";
+			player = "player_1";
+			step = 1;
+		}
+	  );
+
+	  textures = (
+		{
+			name = "player";
+			file = "../../../assets/astronaut_front.png";
+			num_frames_x = 1;
+			num_frames_y = 1;
+		}
+	  );
+
+	  players = (
+	  	{
+			name = "player_1";
+			texture = "player";
+			pos_x = 540;
+			pos_y = 380;
+		}
+	  );
 
 	  tilesets = (
 		{
@@ -32,9 +58,9 @@ config:
 	  maps = (
 		{
 			name = "base_map";
-			file = "../../../assets/tiled_test_01.csv";
+			file = "../../../assets/tiled_test_03.csv";
 			tileset = "base_blocks";
-			size = { witdh = 20; height = 15; };
+			size = { witdh = 60; height = 15; };
 		}
 	  );
 }
