@@ -2,6 +2,15 @@
 # some news ... see also TODO for hints
 #
 
+
+2019-02-12 -> assets:
+	      add some more playground
+
+	      c:
+	      add moving tiled example skelton
+	      add some tiled based config stuff
+	      add some more content for libgame
+
 2019-02-12 -> assets:
 	      add some more playground
 
